Modificacio a index.html
Amb aquest commit he modificat el fitxer index.html

--- a/index.html
+++ b/index.html
@@ -11,25 +11,29 @@
 	</div>
 
 	<div class="cos">
- 		 <p><strong>Sant Antoni de Calonge</strong></p>
+		<div class="article">
+ 			 <p><strong>Sant Antoni de Calonge</strong></p>
         
-       		 <img  src="Sant-Antoni-de-Calonge-1"></p>
-		<p> He anat a l'apartament dels meus avis de sant antoni de calonge </p>
+       			 <img  src="imatges/Sant-Antoni-de-Calonge-1.jpg"></p>
+			<p> He anat a l'apartament dels meus avis de sant antoni de calonge </p>
+		</div>
+		<div class="article">
+			<p><strong>Menorca</strong></p>
+                 	<img  src="imatges/menorca-noche-mahon-t.jpg"></p>
+                	<p> He anat a Menorca 3 dies </p>
+		</div>
+		<div class="article">
+			<p><strong>Madrid</strong></p>        
 
-		<p><strong>Menorca</strong></p>
+                	 <img  src="imatges/madrid.jpg"></p>
+               		 <p> He anat a Madrid 4 dies </p>
+		</div>
+		<div class="article">
+			<p><strong>Port aventura</strong></p>        
 
-                 <img  src="menorca-noche-mahon-t"></p>
-                <p> He anat a Menorca 3 dies </p>
-
-		<p><strong>Madrid</strong></p>        
-
-                 <img  src="madrid"></p>
-                <p> He anat a Madrid 4 dies </p>
-
-		<p><strong>Port aventura</strong></p>        
-
-                 <img  src="portaventura"></p>
-                <p> He anat a port aventura 1 nit i 2 dies </p>
+                	 <img  src="imatges/portaventura.jpg"></p>
+               		 <p> He anat a port aventura 1 nit i 2 dies </p>
+		</div>
 	</div>
 
 	<div class="footer">
