Modificacio style.css
Amb aquest commit he modificat el fitxer style.css per donar estructura a index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="ca" dir="ltr">
   <head>
     <meta charset="utf-8">
+	 <link rel="stylesheet" href="style.css">
     <title>Activitats estiu 2023</title>
   </head>
   <body>
