Revert "Revert "Modificacio index.html""
This reverts commit 4cd8e420ad320cef1ff32f3ba26f10393bde2569. he modificat les classes del fitxer index.html i les he posat en castella

--- a/index.html
+++ b/index.html
@@ -7,29 +7,29 @@
     <title>Activitats estiu 2023</title>
   </head>
   <body>
-	<div class="header">
+	<div class="cabeza">
  		 <h1>Activitats estiu 2023</h1>
 	</div>
 
-	<div class="cos">
-		<div class="article">
+	<div class="cuerpo">
+		<div class="articulo">
  			 <p><strong>Sant Antoni de Calonge</strong></p>
         
        			 <img  src="imatges/Sant-Antoni-de-Calonge-1.jpg"></p>
 			<p> He anat a l'apartament dels meus avis de sant antoni de calonge </p>
 		</div>
-		<div class="article">
+		<div class="articulo">
 			<p><strong>Menorca</strong></p>
                  	<img  src="imatges/menorca-noche-mahon-t.jpg"></p>
                 	<p> He anat a Menorca 3 dies </p>
 		</div>
-		<div class="article">
+		<div class="articulo">
 			<p><strong>Madrid</strong></p>        
 
                 	 <img  src="imatges/madrid.jpg"></p>
                		 <p> He anat a Madrid 4 dies </p>
 		</div>
-		<div class="article">
+		<div class="articulo">
 			<p><strong>Port aventura</strong></p>        
 
                 	 <img  src="imatges/portaventura.jpg"></p>
@@ -37,7 +37,7 @@
 		</div>
 	</div>
 
-	<div class="footer">
+	<div class="pie">
 		<p> Paula.comas@cirvianum.cat </p>		 
               
         </div>
